# bkjc_database

./: .gitignore  AGENTS.md  DefectClass.json  mp4tojpg.py  requirements.txt  setup.cfg  setup.py  testMySql.py  testSqlServer.py
bkjc_database/: BaseImport.py  CONFIG.py  SqlBase.py  core.py  dbm.py
bkjc_database.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bkjc_database/NerCarDataBase/: BaseImport.py  SqlBase.py  __init__.py  cfg.py  core.py
bkjc_database/NerCarDataBase/SqlManage/: ConfigCenter.py
bkjc_database/NerCarDataBase/config/: DBconfig.json
bkjc_database/NerCarDataBase/mysql/: Ncdhotstrip.py  Ncdhotstripdefect.py  Ncdplatedevice.py  __init__.py
bkjc_database/NerCarDataBase/mysql/models/: __init__.py  defectinfodatabase.py  ncdhotstripdefect.py  ncdplate.py  ncdplatedefect.py
bkjc_database/NerCarDataBase/sqlserver/: Classifier.py  ClientDefectDB.py  DWConfiguration.py  DWQueue.py  SteelRecord.py  master.py
bkjc_database/NerCarDataBase/sqlserver/__pycache__/: SteelRecord.py
bkjc_database/NerCarDataBase/sqlserver/models/: DWDiagnostics.py  DWQueue.py  RcvSteelID.py  ReportServerTempDB.py  SteelTJ.py  __init__.py
bkjc_database/ms/: dbi.py
bkjc_database/property/: DataBaseInterFace.py
bkjc_database/ss/: dbi.py
bkjc_database/test/: LinkMysql.py
demo/: _demo_config.py  defect_overview.py  export_defect_classes.py  testSqlServer.py
