[metadata]
name = bkjc_database
version = 0.0.2
author = lcx
author_email = 1042815796@qq.com
description = BKVisionAlgorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a1112/bkvc
license = GPL 3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved ::  GPL 3.0
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    sqlalchemy
    pymssql
    pymysql

python_requires = >=3.6
;[options.package_data]
;* = *.dll
